--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ yarn.lock
 
 # The development sqlite file
 database/development.sqlite
+.idea/vcs.xml
+.idea/adonis-websocket-auth.iml
+.idea/modules.xml
